# energy

./: .command-link  .command-registry.json  .gitignore  .gitmodules  AGENT_OS_COMMANDS.md  CLAUDE.md  CLAUDE.md.backup-20251023-081047  CLAUDE.md.backup.20250805-204115  COMMANDS.md  MANDATORY_SLASH_COMMAND_ECOSYSTEM.md  Makefile  REQUIREMENTS_MIGRATION.md  agos  application_development.md  create-module-agent.py  create-spec-enhanced.py  create-spec.py  data_science.md  database.db  execute-tasks.py  good_samaritan_guidelines.md  house_construction.md  ide_vscode.md  infrastructure.md  infrastructure_as_code.md  iot.md  libraries_in_development.md  linux.md  npo  online_course_development.md  overview.md  programming.md  programming_principles.md  pyproject.toml  python.md  python_principles.md  requirements-consolidated.txt  salesforce.md  slash  slash_commands.py  (+5 more)
.agent-os/: UV_ENVIRONMENT.md  cross-repo-config.yml  prompt_config.yaml  task_summary.md
.agent-os/agent_learning/: config.yaml  report_template.md
.agent-os/cli/: __init__.py  interactive.py  progress.py
.agent-os/commands/: README_v3_1.md  __init__.py  create_module_agent.py  data.py  engineering_data_context.py  execute-tasks-enhanced.py  git-commit-push-merge-all.py  git-sync-all-enhanced.py  git-trunk-flow-enhanced.py  git-trunk-status.py  git-trunk-sync-all.py  git.py  git_sync.py  git_trunk_flow.py  git_trunk_flow_enhanced.py  install_ecosystem_awareness.py  modernize_deps.py  organize_structure.py  project.py  propagate_commands.py  search_commands.py  spec.py  spec_enhanced.py  sync_all_commands.py  task.py  test.py  test_automation.py  test_automation_enhanced.py  uv_environment_manager.py  verify-ai-work.py
.agent-os/context/: project-patterns.yml  team-conventions.yml
.agent-os/docs/: COMMANDS_MATRIX.md
.agent-os/instructions/: analyze-product.md  create-spec.md  (+5 more)
.claude/: CLAUDE.md
.common/: parallel_utils.py
.drcode/: config.json  droids.yml
.git-commands/: git_manager.py  slash_commands.py
.slash-commands/: ecosystem_registry.json
agents/: README.md  index.yaml
ai/: ML_performance_metrics.jfif  ai.md  ai_and_coding.md  copilot.md  facial_recognition.jfif  generative_ai.md
dev_tools/: daily_routine.bat  environment.yml  git_all_repos.ps1  requirements.txt
docs/: AI_AGENT_ORCHESTRATION.md  HTML_REPORTING_STANDARDS.md
ds/: 30_ml_algorithms.jfif  courses.md  data_services.md  data_transfer.md  digital_transformation.md  diversity.md  free_books.md  free_courses.md  hypothesis_testing.md  lime.md  nlp.md  optmization.md  outliers.md  pytorch.md  trend_analysis.md  ~$rvival_analysis_in_python(Weibull).docx
eng/: ag_drones.md  bsee_data.md  data_driven_manufacturing.md  data_driven_manufacturing.puml  ditigal_twin.md  drilling.md  drilling_rigs.md  emmisions.md  engineering_analysis.md  engineering_data.md  engineering_drawings software_comparison.md  engineering_drawings.md  engineering_general.md  fatigue.md  fea.md  fuels.md  geotechnical.md  installation_vessels.md  intervention.md  jones_act.md  manufacturing.md  metocean.md  offshore_drilling.md  openFOAM.md  paraview.md  process_engineering.md  production.md  risers.md  spe.md  wait_on_weather.md  wind.md  wind_turbines.md
entreprenuership/: company_formation.md
fin/: finanace_analysis.md  finanace_data.md  strategies.md
fortran/: a.out  fortran.md  helloworld.f
medical/: dental.md  eating_habits.md
pm/: agile_tools.md  asana.md  checklist.md  daily_update_template.md  jira.md
py/: ascii_ecosystem.md  comparisons.md  dictionaries.md  docker.md  free_hosting.md  input_arguments.md  installation_miniconda.md  jit_compiler.md  latex.md  linting.md  osi_pi.md  packages.md  plotly.md  plotly_dash.md  profiling.md  python_in_vs_code.md  sqlmodel.md  tables_to_csv.md  test_setup.md  virtual_environments.md  web_scrapping.md  web_service.md
scrum/: daily_update_template.md
sdev/: 2023-01-todo.md  7_habits_of_highly_effective_people.jfif  freelance.md  job_search.md  leadership.md  learning_a_topic.md  mental_models.md  presentations.md  sdev.md  sdev_charlie_munger.md  technical_writing.md  todo.md  youtube_channels.md
tests/: __init__.py  conftest.py  test_smoke.py
tools/: ansible.md  arcgis.md  databricks.md  devops.md  docker.md  engineering_units.md  etl.md  git.md  home_storage.md  infrastructure_as_code.md  jenkins.md  kubernetes.md  linux.md  logo.md  manage-agent-resources.py  markdown.md  mermaid.md  osi_pi.md  plantuml.md  powershell.md  presentation.md  product_management.md  remote_desktop_program.md  report.md  skaffold.md  sonarqube.md  sql.md  travis-ci.md
(+242 files in other folders)
